--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "moment": "^2.24.0",
     "quasar": "^1.0.0",
     "validator": "^12.1.0",
     "vue": "^2.6.10",
