--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "validator": "^12.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^8.3.0",
+    "vue-resource": "^1.5.1",
+    "vue-resource-progressbar-interceptor": "^1.1.9",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
