--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@quasar/quasar-ui-qcalendar": "^1.3.11",
     "moment": "^2.24.0",
     "quasar": "^1.0.0",
     "validator": "^12.1.0",
@@ -20,7 +21,8 @@
     "vue-resource": "^1.5.1",
     "vue-resource-progressbar-interceptor": "^1.1.9",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-module-decorators": "^0.11.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.5",
